--- a/index.html
+++ b/index.html
@@ -6,11 +6,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W-PV-26</title>
     <style>
-        body { 			margin: 0; 			overflow-x: hidden; 			background: linear-gradient(to bottom, #0a0a0a, #1a1a2e); 			background-attachment: fixed; 			color: white; 			font-family: Arial, sans-serif; 			text-align: center; 		}  		canvas { 			position: fixed; 			top: 0; 			left: 0; 			width: 100%; 			height: 100%; 			z-index: -1; 		}  		.nav-bar { 			background: rgba(255, 255, 255, 0.1); 			backdrop-filter: blur(10px); 			display: flex; 			align-items: center; 			gap: 20px; 			padding: 15px; 			position: fixed; 			width: 100%; 			top: 0; 			left: 0; 			z-index: 1000; 			border-bottom: 1px solid rgba(255, 255, 255, 0.2); 		}  		.nav-bar a { 			color: white; 			text-decoration: none; 			font-size: 1.2rem; 			padding: 10px 15px; 			transition: 0.3s; 			text-align: center; 			flex-grow: 1; 		}  		.nav-bar a:hover { 			background: rgba(255, 255, 255, 0.2); 			border-radius: 5px; 		}  		.nav-bar a:first-child { 			font-size: 2rem; 			font-weight: bold; 			text-align: left; 			flex-grow: 2; 		}  		.search-container { 			margin-top: 150px; 			text-align: center; 		}  		#search-bar { 			width: 50%; 			padding: 12px; 			font-size: 1.2rem; 			border: none; 			border-radius: 25px; 			outline: none; 			background: rgba(255, 255, 255, 0.1); 			color: white; 			text-align: center; 			box-shadow: 0 0 10px rgba(255, 255, 255, 0.3); 			transition: 0.3s; 		}  		#search-bar:focus { 			background: rgba(255, 255, 255, 0.2); 		}  		#proxy-container { 			width: 90%; 			height: 80vh; 			overflow: auto; 			margin-top: 100px; 			margin-left: auto; 			margin-right: auto; 			border: 2px solid rgba(255, 255, 255, 0.2); 			border-radius: 10px; 			padding: 15px; 			background-color: #1a1a2e; 			display: none; /* Initially hide the proxied content container */ 		}  		#proxy-container iframe { 			width: 100%; 			height: 100%; 			border: none; 			border-radius: 8px; 		}  		#fullscreen-btn { 			background-color: #333; 			color: white; 			padding: 10px 15px; 			border: none; 			border-radius: 5px; 			cursor: pointer; 			margin-top: 10px; 			display: none; /* Hide fullscreen button initially */ 		}  		#fullscreen-btn:hover { 			background-color: #444; 		}
+        body {
+    margin: 0;
+    overflow-x: hidden;
+    background: linear-gradient(to bottom, #0a0a0a, #1a1a2e);
+    background-attachment: fixed;
+    color: white;
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.nav-bar {
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 15px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.nav-bar a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding: 10px 15px;
+    transition: 0.3s;
+    text-align: center;
+    flex-grow: 1;
+}
+
+.nav-bar a:hover {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 5px;
+}
+
+.nav-bar a:first-child {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: left;
+    flex-grow: 2;
+}
+
+/* New Button Styling */
+.nav-bar button {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 1.2rem;
+}
+
+.nav-bar button:hover {
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.search-container {
+    margin-top: 150px;
+    text-align: center;
+}
+
+#search-bar {
+    width: 50%;
+    padding: 12px;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 25px;
+    outline: none;
+    background: rgba(255, 255, 255, 0.1);
+    color: white;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+    transition: 0.3s;
+}
+
+#search-bar:focus {
+    background: rgba(255, 255, 255, 0.2);
+}
+
+#proxy-container {
+    width: 90%;
+    height: 80vh;
+    overflow: auto;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    padding: 15px;
+    background-color: #1a1a2e;
+    display: none; /* Initially hide the proxied content container */
+}
+
+#proxy-container iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 8px;
+}
+
+#fullscreen-btn {
+    background-color: #333;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    display: none; /* Hide fullscreen button initially */
+}
+
+#fullscreen-btn:hover {
+    background-color: #444;
+}
+
     </style>
 <script src="index.js"></script>
 </head>
-
+<script>function openInBlank() {
+    const newTab = window.open("about:blank", "_blank");
+    newTab.document.write(`
+        <html>
+            <head>
+                <title>Loading...</title>
+                <style>
+                    body, html { margin: 0; padding: 0; overflow: hidden; }
+                    iframe { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; border: none; }
+                </style>
+            </head>
+            <body>
+                <iframe src="https://w-pv-26.vercel.app/index.html"></iframe>
+            </body>
+        </html>
+    `);
+}
+</script>
 <body>
     <canvas id="galaxy"></canvas>
 
@@ -19,6 +166,7 @@
         <a href="/static/games.html">Games</a>
         <a href="/static/proxies.html">Proxies</a>
         <a href="/static/support.html">Support</a>
+        <button id="openButton">Blanker</button>
     </div>
 
     <div class="search-container">
